# RaftHaskell

./: README.md  RaftHaskell.cabal
app/: Main.hs
src/: Raft.hs
src/Network/: NodeManager.hs
src/Raft/: Client.hs  RaftProtocol.hs  Types.hs
